[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/interface/swipe-indicator.png" type="Texture" id=1]
[ext_resource path="res://src/objects/SwipeIndicator.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="SwipeIndicator" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="IndicatorDown" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -24 )
frames = SubResource( 5 )

[node name="IndicatorUp" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, 24 )
rotation = 3.14159
frames = SubResource( 5 )

[node name="IndicatorRight" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -24, 0 )
rotation = -1.5708
frames = SubResource( 5 )

[node name="IndicatorLeft" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 24, 0 )
rotation = 1.5708
frames = SubResource( 5 )
